# Valeria_assistant

./: .gitignore  CMakeLists.txt  run_build.sh  run_integration.sh  run_unit_tests.sh
src/: source.cpp
tests/integration/: TestIntegration.cpp
tests/unit/: CPPwhisper_test.py  llamaUnitTest.cpp  whisperUnitTest.cpp
valeria-core/: package-lock.json  package.json  tsconfig.json  types.ts
valeria-core/src/: conversation.test.ts  conversation.ts  index.ts  sentence-buffer.test.ts  sentence-buffer.ts  types.ts
